deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-manager-deployment
  namespace: task-manager

spec:
  replicas: 1

  selector:
    matchLabels:
      app: task-manager

  template:
    metadata:
      labels:
        app: task-manager

    spec:
      containers:
      - name: task-manager
        image: 796093524638.dkr.ecr.ap-south-1.amazonaws.com/twinkle-cicd:3
        imagePullPolicy: Always
        ports:
        - containerPort: 80
