service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-manager-service

spec:
  selector:
    app: task-manager

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

  type: ClusterIP
